# dotfiles

./: .gitignore  .travis.yml  .vim.custom  .vimrc  ChangeLog.md  LICENSE  Namespaces.hs  Profiles.hs  README  README.markdown  XCompose  Xdefaults  Xresources.scratchpad  Xresources.shiva  ackrc  apvlvrc  bashrc  biegunka.nix  bleedie.xml  cabal.project  conkyrc  default.nix  dotfiles.cabal  dotfiles.nix  e-gpgme.nix  e.nix  env.nix  ghci  gitconfig  gitignore  gtkrc-2.0.mine  gvimrc  haskell.vim  hdevtools.nix  install-biegunka.hs  install.hs  install.sh  irbrc  main.biegunka  meep.nix  (+25 more)
Biegunka/: Biegunka.hs  Namespaces.hs
Biegunka/Environment/: Defaults.hs  Lnd.hs  Qumsrc.hs  S10.hs  Sb2.hs  Violvoic.hs  W540.hs
Environment/: Defaults.hs  Qumsrc.hs  S10.hs  W540.hs
X/: xinitrc
ack/: ackrc
biegunka/: Biegunka.hs  Main.hs  Profiles.hs  dotfiles.cabal
biegunka/Environment/: Base.hs  Defaults.hs  Qumsrc.hs  S10.hs  T510.hs  W530.hs  W540.hs  X220.hs
configs/X/: XCompose  Xdefaults  Xdefaults.template  Xresources.large  Xresources.scratchpad.template  Xresources.shiva.template  Xresources.template  inputrc  prexinit  startup  xinitrc
configs/dwb/: keys  settings
configs/emacs/: emacs
configs/ghc/: ghci  stylish-haskell.yaml
configs/git/: config  (+2 more)
git/: config  tigrc
irssi/: irssi.config
mpd/: mpdconf
mplayer/: config  mplayer.config  mplayer.input.conf
nixos/: configuration.nix  hardware-configuration.nix
nixpkgs/: config.nix
pentadactyl/: pentadactylrc
ruby/: rvmrc
tmux/: conf
vim/: vimrc
xmonad/: xmobar-top.hs  xmobarrc  xmonad.hs
(+81 files in other folders)
