name:                dotfiles
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.markdown
cabal-version:       >=1.10

executable dotfiles
  main-is:             Biegunka.hs
  other-modules:
    Environment.Defaults
    Environment.Lnd
    Environment.Qumsrc
    Environment.S10
    Environment.Sb2
    Environment.Violvoic
    Environment.W540
    Namespaces
  build-depends:
      base >=4.10 && <4.11
    , data-default
    , biegunka
    , lens
  hs-source-dirs:      Biegunka
  default-language:    Haskell2010
